# weavevm_bundler_example

./: Cargo.toml  README.md
data/: leviathan.txt
src/: main.rs
