[package]
name = "weavevm_bundler_example"
version = "0.1.0"
edition = "2021"

[dependencies]
bundler = { git = "https://github.com/weaveVM/bundler", branch = "main" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
hex = "0.4"
eyre = "0.6"

